Repository Synchronize (#14)
implement repository synchronize
